# drop

./: .dockerignore  Dockerfile  README.md  SECURITY.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.code-workspace
.github/workflows/: client-release.yml  droplet-ci.yml  pages.yml  release.yml  server-ci.yml  server-release.yml
app/assets/: tailwindcss.css
app/components/: CarouselPagination.vue  GameCarousel.vue  GamePanel.vue  GameSearchResultWidget.vue  LanguageSelectorListbox.vue  LogLine.vue  NotificationItem.vue  PlatformSelector.vue  PreloadSelector.vue  RankingList.vue  SourceTable.vue  StoreView.vue  TaskWidget.vue  TileWithLink.vue
app/composables/: collection.ts  news.ts  notifications.ts  platform.ts  task.ts  user.ts  users.ts
app/layouts/: admin.vue  default.vue
app/pages/: setup.vue
app/utils/: colors.ts  parseTaskLog.ts
backend/: go.mod  main.go
backend/core/: database.go  go.mod
base/: app.vue  package.json  pnpm-lock.yaml
base/.playground/: nuxt.config.ts
base/components/: ConfirmationModal.vue  LoadingButton.vue  ModalStack.vue  ModalTemplate.vue  NotificationModal.vue  TextInputModal.vue
cli/: .gitignore  Cargo.toml  README.md  flake.nix  spec.md
cli/src/: cli.rs  config.rs  interactive.rs  logging.rs  main.rs  manifest.rs  operator_builder.rs
cli/src/commands/: configure.rs  mod.rs
cli/src/commands/config/: config.rs  config_option.rs  configure.rs  interactive.rs  mod.rs  s3.rs  server.rs
cli/src/commands/configure/: config.rs  config_option.rs  configure.rs  interactive.rs  mod.rs  s3.rs  server.rs
cli/src/commands/connect/: config.rs  config_option.rs  configurable.rs  interactive.rs  mod.rs  s3.rs  speedtest.rs
cli/src/commands/upload/: chunk_reader.rs  interface.rs  mod.rs  s3.rs  speedtest.rs  uploadable.rs  void.rs
cli/src/config/: config.rs  configurable.rs  configure.rs  interactive.rs  mod.rs  s3.rs  server.rs
desktop/: README.md  build.mjs  nvidia-prop-dev.sh  optimize-appimage.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
desktop/main/: app.vue  (+6 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/client/: Cargo.toml
desktop/src-tauri/client/src/: app_state.rs  lib.rs
desktop/src-tauri/cloud_saves/: Cargo.toml
desktop/src-tauri/database/: Cargo.toml
desktop/src-tauri/database/src/: db.rs  interface.rs  models.rs  platform.rs
desktop/src-tauri/download_manager/: Cargo.toml
desktop/src-tauri/download_manager/src/: depot_manager.rs  download_manager_builder.rs  download_manager_frontend.rs  downloadable.rs  error.rs  frontend_updates.rs  lib.rs
desktop/src-tauri/download_manager/src/util/: mod.rs  progress_object.rs  semaphore.rs
desktop/src-tauri/games/: Cargo.toml
desktop/src-tauri/games/src/: lib.rs  library.rs  scan.rs  state.rs
desktop/src-tauri/games/src/collections/: collection.rs
desktop/src-tauri/games/src/downloads/: download_agent.rs  download_logic.rs  drop_data.rs  manifest.rs  mod.rs
desktop/src-tauri/process/: Cargo.toml
desktop/src-tauri/process/src/: compat.rs  error.rs  format.rs  lib.rs  parser.rs  process_handlers.rs  process_manager.rs
desktop/src-tauri/remote/: Cargo.toml
desktop/src-tauri/remote/src/: auth.rs  error.rs  fetch_object.rs  lib.rs  requests.rs  server_proto.rs  utils.rs
desktop/src-tauri/src/: client.rs  collections.rs  download_manager.rs  downloads.rs  games.rs  lib.rs  process.rs  scheduler.rs  updates.rs
desktop/src-tauri/utils/src/: download_manager_send.rs
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
libraries/droplet/: .gitignore  .gitmodules  Cargo.toml  README.md  test.txt
libraries/droplet/.github/workflows/: test.yml
libraries/droplet/src/: file_utils.rs  lib.rs  main.rs  manifest.rs  ssl.rs  tests.rs
libraries/droplet/src/versions/: archive_backend.rs  backends.rs  mod.rs  path_backend.rs  types.rs
libraries/droplet/testfiles/bare_files/: dotfile.7z  emoji_filename.7z  empty_file.7z  file_with_space_in_extension.7z  file_with_spaces.7z  file_without_extension.7z  filename_only_environment_variable_name.7z  filename_with_asterisk.7z  filename_with_backslashes.7z  filename_with_colon.7z  filename_with_dollar.7z  filename_with_environment_variable_name.7z  filename_with_full_windows_path_name.7z  filename_with_lessthan.7z  filename_with_newline.7z  filename_with_spaces_and_backslashes.7z  filename_with_tab.7z  filename_with_windows_environment_variable_name.7z  standard_archive.7z  unicode_filename.7z  windows_reserved_file_name.7z
libraries/droplet/testfiles/subdirectories/: dotsubdirectory.7z  empty_dotsubdirectory.7z  empty_subdirectory.7z  subdirectory_and_file_with_double_backslashes.7z  subdirectory_and_file_with_spaces.7z  subdirectory_file_with_double_backslashes.7z  subdirectory_with_backslashes.7z  subdirectory_with_double_backslashes.7z  subdirectory_with_single_backslashes.7z  subdirectory_with_symlink_to_self.7z
libraries/libarchive/: Cargo.toml
libraries/libarchive/src/: archive.rs  error.rs  reader.rs  writer.rs
libraries/libarchive/tests/: lib.rs
prisma/: schema.prisma
promo/: .gitignore  content-collections.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
server/: .env.example  .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  Dockerfile  README.md  app.vue  buf.gen.yaml  drop.session.sql  error.vue  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  tsconfig.json
torrential/: .gitignore  Cargo.toml  README.md  build.rs
torrential/benches/: torrential.rs
torrential/docs/: protocol.md  structure.md
torrential/proto/: core.proto  droplet.proto  manifest.proto  version.proto
torrential/src/: conversions.rs  download.rs  handlers.rs  lib.rs  main.rs  manifest.rs  remote.rs  serve.rs  state.rs  token.rs  util.rs
torrential/src/downloads/: download.rs  handlers.rs  mod.rs  serve.rs
torrential/src/droplet/: backend.rs  cert.rs  manifest.rs  mod.rs
torrential/src/server/: download.rs  mod.rs
(+651 files in other folders)
