[package]
name = "downpour"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
droplet-rs = { git = "https://github.com/Drop-OSS/droplet-rs.git", version = "0.14" }
fern = { version = "0.7.1", features = ["colored"] }
indicatif = "0.18.3"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros"] }
tokio-util = "0.7.18"
url = "2.5.8"
webbrowser = "1.0.6"
color-eyre = "0.6.5"
inquire = "0.9.2"
