[package]
edition = "2021"
authors = ["Drop-OSS"]
name = "droplet-rs"
version = "0.9.2"
license = "AGPL-3.0-only"
description = "Droplet is a `napi.rs` Rust/Node.js package full of high-performance and low-level utils for Drop"

[dependencies]
hex = "0.4.3"
time-macros = "0.2.22"
time = "0.3.41"
webpki = "0.22.4"
ring = "0.17.14"
dyn-clone = "1.0.20"
tokio = { version = "^1.48.0", features = ["process", "fs", "io-util"] }
anyhow = "1.0.100"
async-trait = "0.1.89"

[dependencies.x509-parser]
version = "0.17.0"
features = ["verify"]

[dependencies.rcgen]
version = "0.13.2"
features = ["crypto", "pem", "x509-parser"]

[profile.release]
lto = true
strip = "symbols"
