[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "*"
chrono = "0.4.42"
ctr = "0.9.2"
dirs = "6.0.0"
keyring = { version = "3.6.3", features = ["apple-native", "crypto-rust", "linux-native-sync-persistent", "windows-native"] }
log = "0.4.28"
rand = "0.9.2"
ron = "0.12.0"
serde = "1.0.228"
serde_with = "3.15.0"
url = "2.5.7"
whoami = "1.6.1"
