[package]
name = "download_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
atomic-instant-full = "0.1"
database = { version = "0.1.0", path = "../database" }
futures-util = "0.3.31"
humansize = "2.1.3"
log = "0.4.28"
parking_lot = "0.12.5"
remote = { version = "0.1.0", path = "../remote" }
serde = "1.0.228"
serde_with = "3.15.0"
tauri = "*"
throttle_my_fn = "0.2.6"
tokio = { version = "1.48.0", features = ["sync"] }
utils = { version = "0.1.0", path = "../utils" }
