[package]
name = "games"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.89"
atomic-instant-full = "0.1.0"
bitcode = "0.6.7"
boxcar = "0.2.14"
crossbeam-channel = "0.5.15"
ctr = "0.9.2"
database = { path = "../database", version = "0.1.0" }
download_manager = { path = "../download_manager", version = "0.1.0" }
droplet-rs = { git = "https://github.com/Drop-OSS/droplet-rs" }
futures-util = "*"
hex = "0.4.3"
log = "0.4.28"
pot = "3.0.1"
rayon = "1.11.0"
remote = { path = "../remote", version = "0.1.0" }
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tauri = "*"
throttle_my_fn = "0.2.6"
tokio = { version = "*", features = ["rt", "sync"] }
tokio-util = { version = "*", features = ["io"] }
utils = { path = "../utils", version = "0.1.0" }
