[package]
name = "remote"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bitcode = "0.6.7"
bytes = "1.11.0"
chrono = "0.4.42"
client = { path = "../client", version = "0.1.0" }
database = { path = "../database", version = "0.1.0" }
droplet-rs = "0.7.3"
gethostname = "1.0.2"
hex = "0.4.3"
http = "1.3.1"
log = "0.4.28"
md5 = "0.8.0"
reqwest = { version = "0.12.28", default-features = false, features = [
  "blocking",
  "http2",
  "json",
  "native-tls-alpn",
  "rustls-tls",
  "rustls-tls-native-roots",
  "stream",
] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-websocket = "0.5.1"
serde = "1.0.228"
serde_with = "3.15.0"
tauri = "*"
url = "2.5.7"
utils = { path = "../utils", version = "0.1.0" }
